--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -201,7 +201,7 @@ a.btn-mobile {
     }
 }
 
-/* min kod --- add on code */
+/* min kod --- add on code a*/
 
 .nav-links-cta:hover {
     background: red;
